tdf#85769 Avoid writing font name attribute twice, by ignoring empty value

Change-Id: If2491db482fc6eebc5d28f03ace12a89ac6c0a0f